--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exo Molengeek html/sass/git</title>
     <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="mauve">
+            <img src="./public/img/many_contact_logo.png" alt="many">
+            <form action="">
+                <label for="mail">Restez informé</label>
+                <input type="text" placeholder="e-Mail">
+                <button>S'inscrire</button>
+            </form>
+        </div>
+        <nav>
+            <img src="./public/img/molenGeek.png" alt="">
+            <ul>
+                <li><a href="#">accueil</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">co working</a></li>
+                <li><a href="#">codind school</a></li>
+                <li><a href="#">agenda</a></li>
+                <li><a href="#">formation</a></li>
+                <li><a href="#">presse</a></li>
+            </ul>
+            <span>Testez le coworking</span>
+        </nav>
+
+    </header>
 </body>
 </html>
