--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="mauve">
@@ -22,19 +24,61 @@
             </form>
         </div>
         <nav>
-            <img src="./public/img/molenGeek.png" alt="">
+            <div class="logo">
+                <img src="./public/img/molenGeek.png" alt="">
+            </div>
+            <div class="navigation">
             <ul>
                 <li><a href="#">accueil</a></li>
                 <li><a href="#">A propos</a></li>
                 <li><a href="#">co working</a></li>
-                <li><a href="#">codind school</a></li>
+                <li><a href="#">coding school</a></li>
                 <li><a href="#">agenda</a></li>
                 <li><a href="#">formation</a></li>
                 <li><a href="#">presse</a></li>
             </ul>
-            <span>Testez le coworking</span>
+            </div>
+            <div class="coworking">
+                <a href="#">Testez le coworking</a>
+            </div>
         </nav>
+ </header>
 
-    </header>
+ <h1>MolenGeek</h1>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam consequuntur doloremque ipsam nam odit
+     accusantium!</p>
+ <ul>
+     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+     <li>Maxime repellendus veritatis facilis tempora consectetur repudiandae distinctio?</li>
+     <li>Magni fuga asperiores vitae iure, tenetur hic mollitia.</li>
+     <li>Distinctio dolor, fugit labore ad optio minima deleniti?</li>
+     <li>Assumenda atque officia quasi qui quis ea ex!</li>
+     <li>Nemo, iste fugit unde rem id deserunt tempore?</li>
+ </ul>
+</section>
+
+<section>
+ <h2>MolenGeek EcoSysteme Lorem, ipsum dolor.</h2>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit earum, repudiandae itaque illo doloribus fuga!</p>
+ <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates animi ut inventore, sint asperiores neque!</p>
+</section>
+
+<!-- Footer -->
+<footer>
+ <div class="reseaux">
+     <ul>
+         <li> <a href=""><i class="fab fa-facebook f"></i> Facebook</a>  </li>
+         <li> <a href=" "><i class="fab fa-twitter"></i>Twitter</a> </li>
+         <li> <a href=""><i class="fab fa-instagram"></i>Instagram</a> </li>
+     </ul>
+ </div>
+ <div class="copy">
+     <img src="./public/img/molenGeek.png" alt="molengeek.png">
+     <p>&copy;yright by molengeek</p>
+ </div>
+</footer>
+
+
+
 </body>
 </html>
