--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         </nav>
  </header>
 
+ <!-- premiere section -->
+<section>
  <h1>MolenGeek</h1>
  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam consequuntur doloremque ipsam nam odit
      accusantium!</p>
@@ -56,7 +58,7 @@
      <li>Nemo, iste fugit unde rem id deserunt tempore?</li>
  </ul>
 </section>
-
+<!-- section2 -->
 <section>
  <h2>MolenGeek EcoSysteme Lorem, ipsum dolor.</h2>
  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit earum, repudiandae itaque illo doloribus fuga!</p>
