--- a/index.html
+++ b/index.html
@@ -28,59 +28,66 @@
                 <img src="./public/img/molenGeek.png" alt="">
             </div>
             <div class="navigation">
-            <ul>
-                <li><a href="#">accueil</a></li>
-                <li><a href="#">A propos</a></li>
-                <li><a href="#">co working</a></li>
-                <li><a href="#">coding school</a></li>
-                <li><a href="#">agenda</a></li>
-                <li><a href="#">formation</a></li>
-                <li><a href="#">presse</a></li>
-            </ul>
+                <ul>
+                    <li><a href="#">accueil</a></li>
+                    <li><a href="#">A propos</a></li>
+                    <li><a href="#">co working</a></li>
+                    <li><a href="#">coding school</a></li>
+                    <li><a href="#">agenda</a></li>
+                    <li><a href="#">formation</a></li>
+                    <li><a href="#">presse</a></li>
+                </ul>
             </div>
             <div class="coworking">
                 <a href="#">Testez le coworking</a>
             </div>
         </nav>
- </header>
+    </header>
 
- <!-- premiere section -->
-<section>
- <h1>MolenGeek</h1>
- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam consequuntur doloremque ipsam nam odit
-     accusantium!</p>
- <ul>
-     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-     <li>Maxime repellendus veritatis facilis tempora consectetur repudiandae distinctio?</li>
-     <li>Magni fuga asperiores vitae iure, tenetur hic mollitia.</li>
-     <li>Distinctio dolor, fugit labore ad optio minima deleniti?</li>
-     <li>Assumenda atque officia quasi qui quis ea ex!</li>
-     <li>Nemo, iste fugit unde rem id deserunt tempore?</li>
- </ul>
-</section>
-<!-- section2 -->
-<section>
- <h2>MolenGeek EcoSysteme Lorem, ipsum dolor.</h2>
- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit earum, repudiandae itaque illo doloribus fuga!</p>
- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates animi ut inventore, sint asperiores neque!</p>
-</section>
+    <!-- premiere section -->
+    <section>
+        <h1>MolenGeek</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam consequuntur doloremque ipsam nam odit
+            accusantium!</p>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Maxime repellendus veritatis facilis tempora consectetur repudiandae distinctio?</li>
+            <li>Magni fuga asperiores vitae iure, tenetur hic mollitia.</li>
+            <li>Distinctio dolor, fugit labore ad optio minima deleniti?</li>
+            <li>Assumenda atque officia quasi qui quis ea ex!</li>
+            <li>Nemo, iste fugit unde rem id deserunt tempore?</li>
+        </ul>
+    </section>
+    <!-- section2 -->
+    <section>
+        <h2>MolenGeek EcoSysteme Lorem, ipsum dolor.</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit earum, repudiandae itaque illo doloribus fuga!
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates animi ut inventore, sint asperiores
+            neque!</p>
+    </section>
 
-<!-- Footer -->
-<footer>
- <div class="reseaux">
-     <ul>
-         <li> <a href=""><i class="fab fa-facebook f"></i> Facebook</a>  </li>
-         <li> <a href=" "><i class="fab fa-twitter"></i>Twitter</a> </li>
-         <li> <a href=""><i class="fab fa-instagram"></i>Instagram</a> </li>
-     </ul>
- </div>
- <div class="copy">
-     <img src="./public/img/molenGeek.png" alt="molengeek.png">
-     <p>&copy;yright by molengeek</p>
- </div>
-</footer>
+    <!-- Footer -->
+    <footer>
+        <div class="reseaux">
+            <ul>
+                <li>
+                    <a href="">
+                        <i class="fab fa-facebook f"></i> Facebook</a> </li>
+                <li>
+                    <a href=" "><i class="fab fa-twitter"></i>Twitter</a> </li>
+                <li>
+                    <a href=""><i class="fab fa-instagram"></i>Instagram</a> </li>
+            </ul>
+        </div>
+        <div class="copy">
+            <img src="./public/img/molenGeek.png" alt="molengeek.png">
+            <p>&copy;yright by molengeek</p>
+        </div>
+    </footer>
 
 
 
 </body>
+
 </html>
